# kai

./: .env.example  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_COMPLETE.md  DOCKER_DEPLOYMENT_CHECKLIST.md  DOCKER_QUICK_START.md  DOCKER_SETUP_SUMMARY.md  PERFORMANCE_CHECKLIST.md  PERFORMANCE_SUMMARY.md  PRODUCTION_READY_CHECKLIST.md  PROJECT_INDEX.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  DOCUMENT_UPLOAD_GUIDE.md  Dockerfile  ENCRYPTION.md  ENCRYPTION_SUMMARY.md  JOURNAL_API.md  JOURNAL_ARCHITECTURE.md  JOURNAL_IMPLEMENTATION.md  JOURNAL_QUICKSTART.md  TEST_REPORT.md  alembic.ini  pyproject.toml  test_app.py  test_auth.py  test_auth_flow.sh
backend/alembic/: env.py
backend/alembic/versions/: 002_add_performance_indexes.py  003_add_document_model.py  add_encryption_fields.py  d943cf442dc4_initial_migration_with_user_userprofile_.py
backend/docs/: LLM_SETUP.md  LLM_TESTING.md
backend/examples/: document_upload_example.py
backend/scripts/: generate_secrets.py  test_llm_connection.py  verify_performance.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  genetic_agent.py  guardrail_agent.py  kai_agent.py  orchestrator.py  wellness_agent.py
backend/src/api/: __init__.py  auth.py  chat.py  documents.py  health.py  journal.py
backend/src/auth/: __init__.py  auth.py  dependencies.py  jwt_handler.py  schemas.py
backend/src/cache/: __init__.py  decorators.py  redis_client.py
backend/src/core/: config.py  (+2 more)
backend/tests/: conftest.py
backend/uploads/: .gitignore
(+100 files in other folders)
